<resources>
    <string name="app_name">GESTORAMA</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="less">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">*</string>
    <string name="ans">ANS</string>
    <string name="dec">.</string>
    <string name="_0">0</string>
    <string name="div">/</string>
    <string name="browse">browse</string>
    <string name="phone">phone</string>
    <string name="equ">=</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_div_0">no es pot dividir per 0</string>
</resources>
